--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "bootstrap": "^5.3.2",
     "next": "14.0.2",
+    "octokit": "^3.1.2",
     "react": "^18",
     "react-dom": "^18"
   },
